# lail-hermes-agent

./: .gitignore  README.md  pyproject.toml
deploy/: install.ps1  start.bat
docs/: SMOKE.md  TODO.md  design-spec.md  implementation-plan.md
docs/superpowers/plans/: 2026-07-15-project-registry.md  2026-07-15-startup-recovery.md  2026-07-17-engine-model-effort-and-projects-ui.md
docs/superpowers/specs/: 2026-07-15-project-registry-design.md  2026-07-15-startup-recovery-design.md  2026-07-17-engine-model-effort-and-projects-ui-design.md
hermes/: ask.py  ask_server.py  ask_ui.py  build_runner.py  config.py  engine_result.py  engine_runner.py  git_status.py  main.py  mcp_hub.py  orchestrator.py  paths.py  plan_context.py  project_detect.py  project_resolve.py  recovery.py  session_store.py  spa.html  telegram_bridge.py  test_runner.py  tg_format.py  web_ui.py
hermes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hermes/evals/: __init__.py  __main__.py  cases.py  rules.py
tests/: conftest.py  test_ask.py  test_ask_server.py  test_ask_ui.py  test_ask_wiring.py  test_build_runner.py  test_config.py  test_engine_loop.py  test_engine_result.py  test_engine_runner.py  test_eval_rules.py  test_git_status.py  test_main_smoke.py  test_mcp_hub.py  test_orchestrator.py  test_paths.py  test_plan_context.py  test_project_detect.py  test_project_resolve.py  test_recovery.py  test_session_store.py  test_telegram_bridge.py  test_test_runner.py  test_tg_format.py  test_web_ui.py
