[project]
name = "hermes"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot>=21",
  "openai>=1.40",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "mcp>=1.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
browser = ["playwright>=1.45"]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
  # starlette's TestClient warns about its httpx dependency; not actionable here
  "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]

[tool.setuptools.packages.find]
include = ["hermes*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
